; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_route.c_print_route_option.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_route.c_print_route_option.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.route_option = type { i32, i32, i32, i32 }

@.str = private unnamed_addr constant [20 x i8] c"  route %s/%s/%s/%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.route_option*, i32)* @print_route_option to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @print_route_option(%struct.route_option* %0, i32 %1) #0 {
  %3 = alloca %struct.route_option*, align 8
  %4 = alloca i32, align 4
  store %struct.route_option* %0, %struct.route_option** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.route_option*, %struct.route_option** %3, align 8
  %7 = getelementptr inbounds %struct.route_option, %struct.route_option* %6, i32 0, i32 3
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @show_opt(i32 %8)
  %10 = load %struct.route_option*, %struct.route_option** %3, align 8
  %11 = getelementptr inbounds %struct.route_option, %struct.route_option* %10, i32 0, i32 2
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @show_opt(i32 %12)
  %14 = load %struct.route_option*, %struct.route_option** %3, align 8
  %15 = getelementptr inbounds %struct.route_option, %struct.route_option* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @show_opt(i32 %16)
  %18 = load %struct.route_option*, %struct.route_option** %3, align 8
  %19 = getelementptr inbounds %struct.route_option, %struct.route_option* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @show_opt(i32 %20)
  %22 = call i32 @msg(i32 %5, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i32 %9, i32 %13, i32 %17, i32 %21)
  ret void
}

declare dso_local i32 @msg(i32, i8*, i32, i32, i32, i32) #1

declare dso_local i32 @show_opt(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
